# Crisp

./: .clang-format  .clang-tidy  .clangd  .gitignore  Args.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Config.lua  LICENSE  LICENSE.md  README.md
Crisp/: CMakeLists.txt  Crisp.natvis  Crisp.sln  main.cpp
Crisp/Animation/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  PropertyAnimation.hpp
Crisp/Camera/: AbstractCamera.cpp  AbstractCamera.hpp  CameraController.cpp  CameraController.hpp  FreeCamera.cpp  FreeCamera.hpp  TargetCamera.cpp  TargetCamera.hpp
Crisp/Core/: Application.cpp  Application.hpp  ApplicationEnvironment.cpp  ApplicationEnvironment.hpp  FrameTimeLogger.hpp  Keyboard.hpp  LuaConfig.hpp  LuaMachine.cpp  LuaState.cpp  SceneContainer.cpp  SceneContainer.hpp  ThreadPool.hpp  Window.cpp
Crisp/Crisp/: BitFlags.hpp  CMakeLists.txt  ChromeProfiler.hpp  Crisp.vcxproj  Crisp.vcxproj.filters  Delegate.hpp  Enumerate.hpp  Event.hpp  LuaConfig.hpp  Profiler.hpp  StringUtils.cpp  StringUtils.hpp  ZipIterator.hpp  temp.shader
Crisp/CrispCore/: CrispCore.vcxproj  CrispCore.vcxproj.filters
Crisp/GUI/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  ComboBoxItem.hpp  Control.cpp  Control.hpp  ControlGroup.cpp  ControlGroup.hpp  CrispGui.cpp  CrispGui.hpp  DebugRect.cpp  DoubleSlider.hpp  DynamicUniformBufferResource.cpp  DynamicUniformBufferResource.hpp  Form.cpp  Form.hpp  GuiEnums.hpp  IntroductionPanel.cpp  ListBox.hpp  MemoryUsageBar.cpp  MemoryUsageBar.hpp  RenderSystem.cpp  RenderSystem.hpp  Slider.hpp  SliderModel.hpp  StatusBar.cpp  StatusBar.hpp
Crisp/Geometry/: Geometry.cpp  Geometry.hpp  MeshGenerators.cpp  MeshGenerators.hpp  TransformBuffer.cpp  TransformBuffer.hpp  TriangleMesh.cpp  TriangleMesh.hpp  VertexAttributeBuffer.hpp  VertexAttributeTraits.hpp  VertexLayout.hpp
Crisp/IO/: FbxImporter.cpp  FileUtils.cpp  FileUtils.hpp  ImageFileBuffer.cpp  ImageFileBuffer.hpp  MeshImporter.cpp  MeshImporter.hpp  WavefrontObjImporter.cpp  WavefrontObjImporter.hpp
Crisp/Lights/: DirectionalLight.cpp  EnvironmentLighting.cpp  EnvironmentLighting.hpp  LightSystem.cpp  LightSystem.hpp  PointLight.hpp
Crisp/Main/: CMakeLists.txt  main.cpp
Crisp/Models/: BoxVisualizer.hpp  FluidSimulation.hpp  FluidSimulationParams.hpp  Grass.cpp  PositionBasedFluid.cpp  PositionBasedFluid.hpp  SPH.cpp  SPH.hpp  Skybox.cpp
Crisp/Renderer/: BufferUpdatePolicy.hpp  ComputePipeline.hpp  DescriptorSetAllocator.cpp  DescriptorSetAllocator.hpp  DescriptorSetGroup.cpp  DescriptorSetGroup.hpp  DrawCommand.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LuaPipelineBuilder.cpp  LuaPipelineBuilder.hpp  Material.cpp  Material.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineLayoutBuilder.cpp  RenderGraph.cpp  RenderGraph.hpp  RenderNode.cpp  RenderPassBuilder.cpp  Renderer.cpp  Renderer.hpp  RendererConfig.hpp  ResourceContext.cpp  ResourceContext.hpp  Texture.cpp  UniformBuffer.cpp  UniformBuffer.hpp  UniformMultiBuffer.cpp  VertexBuffer.hpp  VirtualFrame.hpp  VulkanBufferUtils.cpp  VulkanBufferUtils.hpp  VulkanImageUtils.cpp  VulkanWorker.cpp  VulkanWorker.hpp
Crisp/Scenes/: AmbientOcclusionScene.cpp  AmbientOcclusionScene.hpp  ClusteredLightingScene.cpp  FluidSimulationPanel.cpp  FluidSimulationScene.cpp  FluidSimulationScene.hpp  NormalMappingScene.cpp  NormalMappingScene.hpp  OceanScene.cpp  OceanScene.hpp  PbrScene.cpp  PbrScene.hpp  RayTracerGui.cpp  RayTracerScene.cpp  RayTracerScene.hpp  RaytracedImage.cpp  RaytracedImage.hpp  Scene.hpp  ShadowMappingPanel.cpp  ShadowMappingScene.cpp  ShadowMappingScene.hpp  VulkanRayTracingScene.cpp  VulkanRayTracingScene.hpp  WorldScene.hpp
Crisp/Shaders/: blinn-phong.frag.glsl  brdf-lut.frag.glsl  brdf-lut.vert.glsl  color-and-shadow.vert.glsl  compute-cell-count.comp.glsl  compute-density-and-pressure-comp.glsl  debug-box.vert.glsl  diffuse-vert.glsl  equirect-to-cube-frag.glsl  equirect-to-cube-vert.glsl  gamma-correct-vert.glsl  gaussian-blur.frag.glsl  gooch-frag.glsl  grass-frag.glsl  grass-vert.glsl  gui-quad-debug-col-frag.glsl  gui-quad-debug-col.vert.glsl  gui-quad-unif-col.frag.glsl  gui-text.frag.glsl  ifft-vert.comp.glsl  integrate.comp.glsl  leaves.vert.glsl  light-culling.comp.glsl  liquid-frag.glsl  liquid-vert.glsl  multiple-scattering.comp.glsl  normal-map-frag.glsl  normal-map-vert.glsl  normal-map.frag.glsl  normal-map.vert.glsl  ocean-oscillate.comp.glsl  ocean.frag.glsl  ocean.vert.glsl  outline.frag.glsl  path-trace.rchit.glsl  pbf-compute-deltas.comp.glsl  pbf-compute-lambdas.comp.glsl  pbf-update-comp.glsl  physically-based-clustered-lights.frag.glsl  physically-based-frag.glsl  (+21 more)
Crisp/ShadingLanguage/: Expressions.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  PrintVisitor.hpp  Reflection.cpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderPreprocessor.cpp  ShaderPreprocessor.hpp  Statements.hpp  Token.hpp
Crisp/Techniques/: ForwardClusteredShading.cpp  ShadowMapper.cpp
Crisp/Test/: BitFlagsTest.cpp  CMakeLists.txt  DelegateTest.cpp  EventTest.cpp  GlmStructuredBindingsTest.cpp  LuaConfigTest.cpp  StringUtilsTest.cpp  WavefrontObjTest.cpp
Crisp/Vesper/: Vesper.vcxproj  Vesper.vcxproj.filters
Crisp/VesperTest/: Distribution1DTest.cpp  VesperTest.vcxproj  VesperTest.vcxproj.filters
Crisp/Vulkan/: RayTracingMaterial.cpp  RayTracingMaterial.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebugUtils.cpp  VulkanDebugUtils.hpp  VulkanDescriptorSet.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDevice.cpp  (+28 more)
CrispCore/: CMakeLists.txt
CrispCoreTest/: BitFlagsTest.cpp  CMakeLists.txt  CommandLineParserTest.cpp  DelegateTest.cpp  EventTest.cpp  GlmStructuredBindingsTest.cpp  LuaConfigTest.cpp  StringUtilsTest.cpp  WavefrontObjTest.cpp
CrispMain/: CMakeLists.txt  main.cpp
CrispTest/: CMakeLists.txt
Vesper/: CMakeLists.txt
VesperTest/: CMakeLists.txt  Distribution1DTest.cpp  EmbreeTest.cpp
(+1814 files in other folders)
