add_subdirectory(Crisp/Animation)
add_subdirectory(Crisp/Camera)
add_subdirectory(Crisp/Common)
add_subdirectory(Crisp/Core)
add_subdirectory(Crisp/Geometry)
add_subdirectory(Crisp/GUI)
add_subdirectory(Crisp/Image)
add_subdirectory(Crisp/IO)
add_subdirectory(Crisp/Lights)
add_subdirectory(Crisp/Materials)
add_subdirectory(Crisp/Math)
add_subdirectory(Crisp/Mesh)
add_subdirectory(Crisp/Models)
add_subdirectory(Crisp/Renderer)
add_subdirectory(Crisp/Scenes)
add_subdirectory(Crisp/ShadingLanguage)
add_subdirectory(Crisp/Vulkan)
add_subdirectory(Crisp)
add_subdirectory(Main)
add_subdirectory(Test)

