add_cpp_static_library(Vesper
    "Vesper/BSDFs/BSDF.cpp"
    "Vesper/BSDFs/BSDF.hpp"
    "Vesper/BSDFs/BSDFFactory.cpp"
    "Vesper/BSDFs/BSDFFactory.hpp"
    "Vesper/BSDFs/DielectricBSDF.cpp"
    "Vesper/BSDFs/DielectricBSDF.hpp"
    "Vesper/BSDFs/LambertianBSDF.cpp"
    "Vesper/BSDFs/LambertianBSDF.hpp"
    "Vesper/BSDFs/Microfacet.cpp"
    "Vesper/BSDFs/Microfacet.hpp"
    "Vesper/BSDFs/MicrofacetDistributions/Beckmann.cpp"
    "Vesper/BSDFs/MicrofacetDistributions/Beckmann.hpp"
    "Vesper/BSDFs/MicrofacetDistributions/GGX.cpp"
    "Vesper/BSDFs/MicrofacetDistributions/GGX.hpp"
    "Vesper/BSDFs/MicrofacetDistributions/MicrofacetDistribution.hpp"
    "Vesper/BSDFs/MicrofacetDistributions/MicrofacetDistributionFactory.cpp"
    "Vesper/BSDFs/MicrofacetDistributions/MicrofacetDistributionFactory.hpp"
    "Vesper/BSDFs/MicrofacetDistributions/Phong.cpp"
    "Vesper/BSDFs/MicrofacetDistributions/Phong.hpp"
    "Vesper/BSDFs/Mirror.cpp"
    "Vesper/BSDFs/Mirror.hpp"
    "Vesper/BSDFs/OrenNayar.cpp"
    "Vesper/BSDFs/OrenNayar.hpp"
    "Vesper/BSDFs/RoughConductor.cpp"
    "Vesper/BSDFs/RoughConductor.hpp"
    "Vesper/BSDFs/RoughDielectric.cpp"
    "Vesper/BSDFs/RoughDielectric.hpp"
    "Vesper/BSDFs/SmoothConductor.cpp"
    "Vesper/BSDFs/SmoothConductor.hpp"
    "Vesper/BSSRDFs/BSSRDF.hpp"
    "Vesper/BSSRDFs/BSSRDFFactory.cpp"
    "Vesper/BSSRDFs/BSSRDFFactory.hpp"
    "Vesper/BSSRDFs/DipoleBSSRDF.cpp"
    "Vesper/BSSRDFs/DipoleBSSRDF.hpp"
    "Vesper/BSSRDFs/IrradianceTree.hpp"
    "Vesper/Cameras/Camera.cpp"
    "Vesper/Cameras/Camera.hpp"
    "Vesper/Cameras/CameraFactory.cpp"
    "Vesper/Cameras/CameraFactory.hpp"
    "Vesper/Cameras/Perspective.cpp"
    "Vesper/Cameras/Perspective.hpp"
    "Vesper/Core/Intersection.hpp"
    "Vesper/Core/MipMap.cpp"
    "Vesper/Core/MipMap.hpp"
    "Vesper/Core/Scene.cpp"
    "Vesper/Core/Scene.hpp"
    "Vesper/Core/VariantMap.hpp"
    "Vesper/Core/XmlSceneParser.cpp"
    "Vesper/Core/XmlSceneParser.hpp"
    "Vesper/ImageBlock.cpp"
    "Vesper/ImageBlock.hpp"
    "Vesper/Integrators/AmbientOcclusion.cpp"
    "Vesper/Integrators/AmbientOcclusion.hpp"
    "Vesper/Integrators/DirectLighting.cpp"
    "Vesper/Integrators/DirectLighting.hpp"
    "Vesper/Integrators/EmsDirectLighting.cpp"
    "Vesper/Integrators/EmsDirectLighting.hpp"
    "Vesper/Integrators/Integrator.cpp"
    "Vesper/Integrators/Integrator.hpp"
    "Vesper/Integrators/IntegratorFactory.cpp"
    "Vesper/Integrators/IntegratorFactory.hpp"
    "Vesper/Integrators/MatsDirectLighting.cpp"
    "Vesper/Integrators/MatsDirectLighting.hpp"
    "Vesper/Integrators/MisDirectLighting.cpp"
    "Vesper/Integrators/MisDirectLighting.hpp"
    "Vesper/Integrators/MisPathTracer.cpp"
    "Vesper/Integrators/MisPathTracer.hpp"
    "Vesper/Integrators/Normals.cpp"
    "Vesper/Integrators/Normals.hpp"
    "Vesper/Integrators/PathTracer.cpp"
    "Vesper/Integrators/PathTracer.hpp"
    "Vesper/Integrators/VolumePathTracer.cpp"
    "Vesper/Integrators/VolumePathTracer.hpp"
    "Vesper/Lights/AreaLight.cpp"
    "Vesper/Lights/AreaLight.hpp"
    "Vesper/Lights/DirectionalLight.cpp"
    "Vesper/Lights/DirectionalLight.hpp"
    "Vesper/Lights/EnvironmentLight.cpp"
    "Vesper/Lights/EnvironmentLight.hpp"
    "Vesper/Lights/Light.hpp"
    "Vesper/Lights/LightFactory.cpp"
    "Vesper/Lights/LightFactory.hpp"
    "Vesper/Lights/PointLight.cpp"
    "Vesper/Lights/PointLight.hpp"
    "Vesper/Media/Homogeneous.cpp"
    "Vesper/Media/Homogeneous.hpp"
    "Vesper/Media/Medium.cpp"
    "Vesper/Media/Medium.hpp"
    "Vesper/Media/MediumFactory.cpp"
    "Vesper/Media/MediumFactory.hpp"
    "Vesper/PhaseFunctions/Isotropic.cpp"
    "Vesper/PhaseFunctions/Isotropic.hpp"
    "Vesper/PhaseFunctions/PhaseFunction.hpp"
    "Vesper/PhaseFunctions/PhaseFunctionFactory.cpp"
    "Vesper/PhaseFunctions/PhaseFunctionFactory.hpp"
    "Vesper/RayTracer.cpp"
    "Vesper/RayTracer.hpp"
    "Vesper/RayTracerUpdate.hpp"
    "Vesper/ReconstructionFilters/GaussianFilter.cpp"
    "Vesper/ReconstructionFilters/GaussianFilter.hpp"
    "Vesper/ReconstructionFilters/ReconstructionFilter.cpp"
    "Vesper/ReconstructionFilters/ReconstructionFilter.hpp"
    "Vesper/Samplers/Fixed.cpp"
    "Vesper/Samplers/Fixed.hpp"
    "Vesper/Samplers/Independent.cpp"
    "Vesper/Samplers/Independent.hpp"
    "Vesper/Samplers/Sampler.cpp"
    "Vesper/Samplers/Sampler.hpp"
    "Vesper/Samplers/SamplerFactory.cpp"
    "Vesper/Samplers/SamplerFactory.hpp"
    "Vesper/Shapes/Mesh.cpp"
    "Vesper/Shapes/Mesh.hpp"
    "Vesper/Shapes/MeshLoader.cpp"
    "Vesper/Shapes/MeshLoader.hpp"
    "Vesper/Shapes/Shape.cpp"
    "Vesper/Shapes/Shape.hpp"
    "Vesper/Shapes/ShapeFactory.cpp"
    "Vesper/Shapes/ShapeFactory.hpp"
    "Vesper/Shapes/Sphere.cpp"
    "Vesper/Shapes/Sphere.hpp"
    "Vesper/Textures/CheckerboardTexture.hpp"
    "Vesper/Textures/ConstantTexture.hpp"
    "Vesper/Textures/Texture.hpp"
    "Vesper/Textures/TextureFactory.hpp"
    "Vesper/Textures/UVTexture.cpp"
    "Vesper/Textures/UVTexture.hpp"
)
target_link_libraries(Vesper
    PUBLIC CrispMath
    PUBLIC CrispFormat
    PRIVATE CrispLogger
    PUBLIC CrispHashMap
    PUBLIC CrispSpectrum
    PUBLIC CrispOptics
    PUBLIC tbb
    PUBLIC embree
    PUBLIC tinyexr
    PUBLIC rapidxml)
target_include_directories(Vesper PUBLIC ".")
target_include_directories(Vesper PUBLIC "./Vesper")
